# cpp_image

./: .gitignore  CMakeLists.txt  links.txt
cmake/: SetupTargerWarnings.cmake
examples/: bmp2bmp.cpp  bmp_info.cpp  gen_example_bmps.cpp  write_bmp_different_bpp.cpp
include/cpp_image/: bmp.hpp  color.hpp  exceptions.hpp  image.hpp  png.hpp
src/: bmp_common.hpp  bmp_read.cpp  bmp_write.cpp  png_common.cpp  png_common.hpp  png_read.cpp
tests/: run_tests.bat
